syntax = "proto3";

package pchat.user;

option go_package = "pchat/pb/user";

message LoginResponse {
  string token = 1;
}

message RegisterResponse {
  bool needAudit = 1;
}
